--- a/assets/admin/css/admin.css
+++ b/assets/admin/css/admin.css
@@ -13,3 +13,52 @@
     letter-spacing: 0.1em;
     max-width: 7em;
 }
+
+.good-form {
+    min-height: 600px;
+}
+
+.good-form paper-tabs {
+    margin-bottom: 25px;
+}
+
+.upload__wrapper {
+    margin-bottom: 40px;
+    display: inline-block;
+    position: relative;
+    box-sizing: border-box;
+}
+
+.upload__wrapper input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.images__list {
+    margin: 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.images__item {
+    padding: 15px;
+    padding-bottom: 30px;
+
+    display: inline-block;
+    width: 100px;
+    height: 150px;
+
+    border: grey;
+
+}
+
+.images__item img {
+    width: 100%;
+}
