--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,36 +1,28 @@
-/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
  * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in
- *    IE on Windows Phone and in iOS.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 html {
   line-height: 1.15;
   /* 1 */
-  -ms-text-size-adjust: 100%;
-  /* 2 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
 }
 /* Sections
    ========================================================================== */
 /**
- * Remove the margin in all browsers (opinionated).
+ * Remove the margin in all browsers.
  */
 body {
   margin: 0;
 }
 /**
- * Add the correct display in IE 9-.
+ * Render the `main` element consistently in IE.
  */
-article,
-aside,
-footer,
-header,
-nav,
-section {
+main {
   display: block;
 }
 /**
@@ -43,22 +35,6 @@ h1 {
 }
 /* Grouping content
    ========================================================================== */
-/**
- * Add the correct display in IE 9-.
- * 1. Add the correct display in IE.
- */
-figcaption,
-figure,
-main {
-  /* 1 */
-  display: block;
-}
-/**
- * Add the correct margin in IE 8.
- */
-figure {
-  margin: 1em 40px;
-}
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
@@ -84,17 +60,13 @@ pre {
 /* Text-level semantics
    ========================================================================== */
 /**
- * 1. Remove the gray background on active links in IE 10.
- * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
+ * Remove the gray background on active links in IE 10.
  */
 a {
   background-color: transparent;
-  /* 1 */
-  -webkit-text-decoration-skip: objects;
-  /* 2 */
 }
 /**
- * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
+ * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 abbr[title] {
@@ -102,15 +74,9 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
-}
-/**
- * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
- */
-b,
-strong {
-  font-weight: inherit;
 }
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
@@ -130,19 +96,6 @@ samp {
   /* 1 */
   font-size: 1em;
   /* 2 */
-}
-/**
- * Add the correct font style in Android 4.3-.
- */
-dfn {
-  font-style: italic;
-}
-/**
- * Add the correct background and color in IE 9-.
- */
-mark {
-  background-color: #ff0;
-  color: #000;
 }
 /**
  * Add the correct font size in all browsers.
@@ -170,35 +123,15 @@ sup {
 /* Embedded content
    ========================================================================== */
 /**
- * Add the correct display in IE 9-.
- */
-audio,
-video {
-  display: inline-block;
-}
-/**
- * Add the correct display in iOS 4-7.
- */
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-/**
- * Remove the border on images inside links in IE 10-.
+ * Remove the border on images inside links in IE 10.
  */
 img {
   border-style: none;
 }
-/**
- * Hide the overflow in IE.
- */
-svg:not(:root) {
-  overflow: hidden;
-}
 /* Forms
    ========================================================================== */
 /**
- * 1. Change the font styles in all browsers (opinionated).
+ * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
 button,
@@ -206,7 +139,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif;
+  font-family: inherit;
   /* 1 */
   font-size: 100%;
   /* 1 */
@@ -234,16 +167,13 @@ select {
   text-transform: none;
 }
 /**
- * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
- *    controls in Android 4.
- * 2. Correct the inability to style clickable types in iOS and Safari.
+ * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-html [type="button"],
+[type="button"],
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
-  /* 2 */
 }
 /**
  * Remove the inner border and padding in Firefox.
@@ -291,24 +221,20 @@ legend {
   /* 1 */
 }
 /**
- * 1. Add the correct display in IE 9-.
- * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 progress {
-  display: inline-block;
-  /* 1 */
   vertical-align: baseline;
-  /* 2 */
 }
 /**
- * Remove the default vertical scrollbar in IE.
+ * Remove the default vertical scrollbar in IE 10+.
  */
 textarea {
   overflow: auto;
 }
 /**
- * 1. Add the correct box sizing in IE 10-.
- * 2. Remove the padding in IE 10-.
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
  */
 [type="checkbox"],
 [type="radio"] {
@@ -335,9 +261,8 @@ textarea {
   /* 2 */
 }
 /**
- * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
+ * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
@@ -354,11 +279,9 @@ textarea {
 /* Interactive
    ========================================================================== */
 /*
- * Add the correct display in IE 9-.
- * 1. Add the correct display in Edge, IE, and Firefox.
+ * Add the correct display in Edge, IE 10+, and Firefox.
  */
-details,
-menu {
+details {
   display: block;
 }
 /*
@@ -367,24 +290,16 @@ menu {
 summary {
   display: list-item;
 }
-/* Scripting
+/* Misc
    ========================================================================== */
 /**
- * Add the correct display in IE 9-.
- */
-canvas {
-  display: inline-block;
-}
-/**
- * Add the correct display in IE.
+ * Add the correct display in IE 10+.
  */
 template {
   display: none;
 }
-/* Hidden
-   ========================================================================== */
 /**
- * Add the correct display in IE 10-.
+ * Add the correct display in IE 10.
  */
 [hidden] {
   display: none;
@@ -437,13 +352,16 @@ img {
   width: auto;
   box-sizing: border-box;
 }
+.page-header {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
 .page-header__wrapper {
   width: auto;
   box-sizing: border-box;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   padding: 0 15px;
   min-height: 117px;
   background: #fff url("/img/bg-header.svg") no-repeat center;
@@ -692,13 +610,10 @@ img {
   background-image: url("/img/bg-main.jpg");
 }
 .main__page-content {
-  display: -webkit-box;
   display: flex;
   flex-wrap: wrap;
-  -webkit-box-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: baseline;
-          align-items: baseline;
+  justify-content: space-between;
+  align-items: baseline;
   align-content: flex-start;
   width: 100%;
 }
@@ -708,10 +623,8 @@ img {
   padding: 0 15px;
 }
 .slider__content {
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: center;
-          justify-content: center;
+  justify-content: center;
   position: relative;
   border: 2px dashed #60bdde;
   border-radius: 5px;
@@ -757,10 +670,8 @@ img {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -883,10 +794,8 @@ img {
   color: #000;
 }
 .filter__group label {
-  display: -webkit-box;
   display: flex;
-  -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
   font-size: 14px;
   cursor: pointer;
 }
@@ -1012,10 +921,8 @@ img {
 }
 .slider-product__title-wrapper {
   margin-bottom: 10px;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
 }
 .slider-product__title-wrapper::before,
 .slider-product__title-wrapper::after {
@@ -1064,10 +971,8 @@ img {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -1256,14 +1161,10 @@ img {
   min-height: 330px;
 }
 .product {
-  display: -webkit-box;
   display: flex;
   box-sizing: border-box;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   flex-wrap: wrap;
   padding: 15px 10px;
   padding-top: 20px;
@@ -1331,7 +1232,6 @@ img {
 }
 .product__image-wrapper {
   margin-bottom: 15px;
-  display: -webkit-box;
   display: flex;
   min-height: 150px;
 }
@@ -1339,10 +1239,8 @@ img {
   margin: auto;
 }
 .product__characteristic-list {
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   align-content: space-between;
   flex-wrap: wrap;
   margin: 0;
@@ -1385,10 +1283,8 @@ img {
 }
 .page-product__title-wrapper {
   margin-bottom: 10px;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
 }
 .page-product__title-wrapper::after {
   content: "";
@@ -1457,11 +1353,9 @@ img {
 }
 .page-product__qty-form {
   margin: 15px 0;
-  display: -webkit-box;
   display: flex;
   flex-wrap: wrap;
-  -webkit-box-align: baseline;
-          align-items: baseline;
+  align-items: baseline;
 }
 .page-product__qty-field-wrapper {
   display: inline-block;
@@ -1543,7 +1437,6 @@ img {
   line-height: 18px;
 }
 .slider-image__main-image-wrapper {
-  display: -webkit-box;
   display: flex;
   min-height: 230px;
 }
@@ -1553,17 +1446,13 @@ img {
 .slider-image__list {
   margin: 0;
   padding: 0;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: center;
-          justify-content: center;
+  justify-content: center;
   list-style: none;
 }
 .slider-image__item {
-  display: -webkit-box;
   display: flex;
-  -webkit-box-flex: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   padding: 0 6px;
   background-image: url("/img/slider-image-border.png");
   background-repeat: no-repeat;
@@ -1605,10 +1494,8 @@ img {
 .more-color {
   padding: 15px;
   padding-bottom: 0;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
   border: 1px dashed #af7d25;
@@ -1656,10 +1543,8 @@ img {
   line-height: 18px;
 }
 .category__list {
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 .content {
@@ -1667,10 +1552,8 @@ img {
 }
 .content__title-wrapper {
   margin-bottom: 10px;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
 }
 .content__title-wrapper::before,
 .content__title-wrapper::after {
@@ -1697,11 +1580,8 @@ img {
   width: 100%;
 }
 .content__fields {
-  display: -webkit-box;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
+  flex-direction: column;
 }
 .content__form input {
   margin-bottom: 10px;
@@ -1724,7 +1604,6 @@ img {
   margin-bottom: 12px;
   padding: 0;
   list-style: none;
-  display: -webkit-box;
   display: flex;
 }
 .content__auth-social-item {
@@ -1797,15 +1676,11 @@ img {
 .page-footer__bottom-row {
   width: auto;
   box-sizing: border-box;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: end;
-          align-items: flex-end;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 .page-footer__card-payment-list {
-  display: -webkit-box;
   display: flex;
   margin: 0;
   padding: 0;
@@ -1851,8 +1726,7 @@ img {
   .page-header__wrapper {
     padding-top: 15px;
     position: relative;
-    -webkit-box-pack: center;
-            justify-content: center;
+    justify-content: center;
     width: auto;
     box-sizing: border-box;
     min-height: 240px;
@@ -1893,13 +1767,9 @@ img {
     width: 50px;
   }
   .page-header__logo-wrapper {
-    display: -webkit-box;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    -webkit-box-align: center;
-            align-items: center;
+    flex-direction: column;
+    align-items: center;
     align-self: stretch;
     width: auto;
   }
@@ -1920,13 +1790,9 @@ img {
     position: absolute;
     right: 15px;
     top: 15px;
-    display: -webkit-box;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    -webkit-box-align: end;
-            align-items: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
     width: auto;
   }
   .page-header__cart {
@@ -1976,17 +1842,13 @@ img {
     width: auto;
     box-sizing: border-box;
     padding-left: 3px;
-    display: -webkit-box;
     display: flex;
-    -webkit-box-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-            align-items: center;
+    justify-content: space-between;
+    align-items: center;
     position: static;
     background: none;
   }
   .main-nav__list {
-    display: -webkit-box;
     display: flex;
   }
   .main-nav__item::after {
@@ -2106,11 +1968,9 @@ img {
     font-size: 16px;
   }
   .slider-product__wrapper {
-    display: -webkit-box;
     display: flex;
   }
   .slider-product__item:not(:first-child) {
-    display: -webkit-box;
     display: flex;
   }
   .slider-product__item {
@@ -2118,11 +1978,9 @@ img {
     min-height: auto;
   }
   .catalog__list {
-    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
-    -webkit-box-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   .catalog__item {
     width: 30%;
@@ -2131,11 +1989,9 @@ img {
     margin-bottom: 25px;
   }
   .page-product {
-    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
-    -webkit-box-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   .page-product__title-wrapper {
     width: 100%;
@@ -2160,10 +2016,8 @@ img {
     margin: 0 auto;
   }
   .page-footer .container-fluid {
-    display: -webkit-box;
     display: flex;
-    -webkit-box-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   .page-footer__menu,
   .page-footer__social,
@@ -2179,13 +2033,9 @@ img {
     border: none;
   }
   .page-footer__social {
-    display: -webkit-box;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    -webkit-box-align: center;
-            align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
   .page-footer__social-item {
     display: inline-block;
@@ -2199,8 +2049,7 @@ img {
   .page-footer__logo-wrapper {
     display: block;
     position: relative;
-    -webkit-box-flex: 1;
-            flex-grow: 1;
+    flex-grow: 1;
     width: 180%;
   }
   .page-footer__logo-wrapper img {
@@ -2209,8 +2058,7 @@ img {
   }
   .page-footer__card-payment-list {
     position: static;
-    -webkit-box-pack: end;
-            justify-content: flex-end;
+    justify-content: flex-end;
     flex-shrink: 1;
   }
 }
@@ -2284,14 +2132,10 @@ img {
     box-sizing: border-box;
   }
   .page-header__cart-wrapper {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-            flex-direction: row;
+    flex-direction: row;
     flex-wrap: wrap;
-    -webkit-box-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     width: 200px;
   }
   .page-header .btn {
@@ -2325,7 +2169,6 @@ img {
   }
   .main__content {
     margin: 0 auto;
-    display: -webkit-box;
     display: flex;
   }
   .main__left-column {
@@ -2389,7 +2232,6 @@ img {
     right: -12px;
   }
   .page-product__qty-form {
-    display: -webkit-box;
     display: flex;
     flex-wrap: wrap;
   }
