Добавлен виджет Categories

--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -16,7 +16,8 @@
     }
 
     @media @desktop-widths {
-        width: 960px;
+        width: auto;
+        max-width: 1360px;
     }
 }
 
@@ -29,7 +30,7 @@
         max-width: 960px;
         margin: 0 auto;
     }
-    
+
     @media @desktop-widths {
         max-width: 1200px;
     }
