--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2116,7 +2116,8 @@ img {
 }
 @media (min-width: 970px) {
   .container {
-    width: 960px;
+    width: auto;
+    max-width: 1360px;
   }
   .container-fluid {
     max-width: 1200px;
