--- a/src/less/block/catalog.less
+++ b/src/less/block/catalog.less
@@ -21,6 +21,11 @@
     margin-top: 30px;
 }
 
+.catalog__list .summary {
+    margin-bottom: 25px;
+    width: 100%;
+}
+
 .catalog__item {
     margin: 0 auto;
     margin-bottom: 30px;
@@ -36,7 +41,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    
+
     .catalog__item {
         width: 30%;
         min-height: auto;
