--- a/src/components/image-list.html
+++ b/src/components/image-list.html
@@ -123,7 +123,7 @@
                             }.bind(this), 1000);
                         }.bind(this);
 
-                        xhr.open("POST", "/api/images/upload");
+                        xhr.open("POST", "/api/images");
                         xhr.send(formData);
 
                     }.bind(this))
