Добавлен action вывода товаров категории и внесены правки в ImageUploadBehavior

--- a/src/less/block/pagination.less
+++ b/src/less/block/pagination.less
@@ -1,5 +1,6 @@
 .pagination {
     margin: auto;
+    width: 100%;
 }
 
 .pagination__list {
@@ -18,25 +19,25 @@
     line-height: 14px;
     border: 1px solid @bg-brown;
     border-radius: 3px;
-    
+
     &:hover {
         background-color: #ebb766;
     }
-    
+
     &:active {
         opacity: 0.8;
     }
 }
 
 .pagination__link--active {
-    font-weight: bold;    
+    font-weight: bold;
     border: none;
     cursor: auto;
-    
+
     &:hover {
         background-color: transparent;
     }
-    
+
     &:active {
         opacity: 1;
     }
