--- a/src/less/block/product.less
+++ b/src/less/block/product.less
@@ -10,7 +10,7 @@
     border: 1px dashed @bg-brown;
     border-radius: 10px;
     color: #53370a;
-    
+
     &:hover {
         background-color: #ffdaa0;
     }
@@ -82,6 +82,7 @@
     margin-bottom: 15px;
     display: flex;
     min-height: 150px;
+    max-height: 150px;
 
     & a {
         margin: auto;
@@ -107,7 +108,7 @@
     display: block;
     margin-bottom: 5px;
     font-size: 12px;
-    line-height: 14px;    
+    line-height: 14px;
 }
 
 .product__characteristics-item:first-child {
