Добавлен action базового вывода страницы товара

--- a/src/less/block/slider-image.less
+++ b/src/less/block/slider-image.less
@@ -1,4 +1,5 @@
 .slider-image__main-image-wrapper {
+    padding: 20px;
     display: flex;
     min-height: 230px;
 }
@@ -23,7 +24,7 @@
     background-repeat: no-repeat;
     background-position-x: 100%;
     background-position-y: center;
-    
+
     &:last-child {
         background-image: none;
     }
@@ -46,7 +47,7 @@
     font-size: 0;
     width: 26px;
     height: 26px;
-    background: none;    
+    background: none;
     background-repeat: no-repeat;
     outline: none;
     cursor: pointer;
