--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1100,6 +1100,7 @@ img {
 }*/
 .pagination {
   margin: auto;
+  width: 100%;
 }
 .pagination__list {
   margin: 0;
@@ -1430,7 +1431,7 @@ img {
 }
 .page-product__descr h2 {
   position: absolute;
-  top: -12px;
+  top: -21px;
   left: 14px;
   margin: 0;
   font-size: 16px;
@@ -1442,6 +1443,7 @@ img {
   line-height: 18px;
 }
 .slider-image__main-image-wrapper {
+  padding: 20px;
   display: flex;
   min-height: 230px;
 }
