Исправлены пути к модулю user

--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -4,7 +4,7 @@ body {
     font-family: "PT Sans", sans-serif;
     color: #000;
     font-style: normal;
-    background-color: #fff; 
+    background-color: #fff;
 }
 
 img {
@@ -28,12 +28,12 @@ img {
     border-radius: 5px;
     border: 1px solid #008003;
     background-color: @bg-green;
-    
+
     &:hover {
         opacity: 0.8;
         color: #fff;
     }
-    
+
     &:active {
         background-color: darken(@bg-green, 15%);
     }
@@ -50,4 +50,9 @@ img {
 
 .container-fluid {
     .container-fluid();
+}
+
+.user-default-login,
+.user-default-signup {
+    width: 100%;
 }
