--- a/assets/admin/css/admin.css
+++ b/assets/admin/css/admin.css
@@ -21,3 +21,19 @@
 .good-form paper-tabs {
     margin-bottom: 25px;
 }
+
+a.asc:after, a.desc:after {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    padding-left: 5px; }
+
+a.asc:after {
+    content: "\e151"; }
+
+a.desc:after {
+    content: "\e152"; }
