Исправлены некоторые баги по верстке

--- a/src/less/block/product.less
+++ b/src/less/block/product.less
@@ -102,6 +102,7 @@
     list-style: none;
     border-bottom: 1px dashed @bg-brown;
     border-top: 1px dashed @bg-brown;
+    width: 100%;
 }
 
 .product__characteristics-item {
