--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1105,6 +1105,7 @@ img {
 .pagination {
   margin: auto;
   width: 100%;
+  text-align: center;
 }
 .pagination__list {
   margin: 0;
@@ -1261,6 +1262,7 @@ img {
   list-style: none;
   border-bottom: 1px dashed #c16408;
   border-top: 1px dashed #c16408;
+  width: 100%;
 }
 .product__characteristics-item {
   display: block;
