--- a/src/less/style.less
+++ b/src/less/style.less
@@ -4,6 +4,7 @@
 @import "mixins.less";
 @import "scaffolding.less";
 
+@import "block/btn";
 @import "page-header.less";
 @import "block/main-nav.less";
 @import "block/search.less";
