--- a/src/components/image-item.html
+++ b/src/components/image-item.html
@@ -71,7 +71,7 @@
         <paper-toggle-button on-tap="changeMain">Основная
         </paper-toggle-button>
         <content></content>
-        <iron-ajax id="ajax" url="/api/images/{{imageId}}">
+        <iron-ajax id="ajax" url="/api/image/delete-image?id={{imageId}}">
 
         </iron-ajax>
         <!--<iron-ajax
@@ -105,22 +105,18 @@
 
                 var xhr = new XMLHttpRequest();
 
-                xhr.open("POST", "/api/images/toggle-main?id=" + this.imageId);
+                xhr.open("POST", "/api/image/toggle-main?id=" + this.imageId);
 
                 xhr.send(formData);
             },
             ready: function() {
 
                 if (!this.src) {
-                    //this.$$('#get-ajax').generateRequest();
-
                     this.src = "/img/goods/" + this.goodId + "/" + this.fileName;
 
                     if (this.main) {
                         this.$$('paper-toggle-button').checked = true;
                     }
-
-
 
                 } else {
 
@@ -139,9 +135,12 @@
                     if (this.parentNode.id == 'old-images') {
                         if (confirm('Вы действительно хотите удалить эту картинку с сайта?')) {
                             this.$.ajax.method = 'DELETE';
-                            this.$.ajax.generateRequest();
-                            this.parentNode.removeChild(this);
-                            //imageList.querySelector('#ajax').generateRequest();
+                            this.$.ajax.generateRequest().completes.then(
+                                (request) => {
+                                    this.parentNode.removeChild(this);
+                                },
+                                request => console.log('failure', request)
+                            );
                         }
                     } else {
                         imageList.removeNewItem(this.index);
