--- a/src/less/block/product.less
+++ b/src/less/block/product.less
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
-    padding: 15px 10px;
+    padding: 15px 20px;
     padding-top: 20px;
     background-color: rgba(255, 218, 160, 60%);
     border: 1px dashed @bg-brown;
@@ -130,7 +130,7 @@
 }
 
 .product__descr {
-    margin: 0 10px;
+    margin: 0;
     font-size: 12px;
     line-height: 16px;
 }
