Сверстал блок brand

--- a/src/less/block/catalog.less
+++ b/src/less/block/catalog.less
@@ -13,6 +13,7 @@
 
 .catalog__descr {
     margin: 0;
+    margin-bottom: 30px;
     font-size: 14px;
     line-height: 18px;
 }
@@ -29,7 +30,7 @@
 .catalog__item {
     margin: 0 auto;
     margin-bottom: 30px;
-    width: 65%;
+    width: 100%;
     min-width: 200px;
     max-width: 250px;
     min-height: 330px;
