--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -12,6 +12,14 @@ img {
     height: auto;
 }
 
+h2 {
+    margin: 0;
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-weight: normal;
+
+}
+
 .visually-hidden {
     display: none;
 }
