--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -3,6 +3,10 @@
 @bg-blue: #60bdde;
 @bg-green: #0d960b;
 @bg-red: #f33927;
+
+@font-brown: #5f4123;
+@font-hover-brown: #b1600f;
+
 @tablet-widths: ~"(min-width: 768px)";
 @desktop-widths: ~"(min-width: 970px)";
 @retina: ~"(min-resolution: 144dpi), (min-resolution: 1.5 dppx)";
