--- a/src/less/block/breadcrumb.less
+++ b/src/less/block/breadcrumb.less
@@ -11,10 +11,6 @@
         text-decoration: none;
     }
 
-    & > li + li:before {
-        color: black;
-    }
-
     & .active {
         color: black;
     }
@@ -29,6 +25,12 @@
 
     &:last-child {
         font-weight: bold;
+    }
+
+    &::after {
+        content: "/";
+        padding-left: 5px;
+        display: inline-block;
     }
 
     &:last-child::after {
