Переделал навигацию под Yii

--- a/src/less/admin.less
+++ b/src/less/admin.less
@@ -52,3 +52,8 @@ a.disabled {
     cursor: default; /*  курсор в виде стрелки */
     color: #888;/* цвет текста серый */
 }
+
+div.required label.control-label:after {
+    content: " *";
+    color: red;
+}
