--- a/assets/admin/css/admin.css
+++ b/assets/admin/css/admin.css
@@ -1,4 +1,4 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -18,12 +18,6 @@ html {
  */
 body {
   margin: 0;
-}
-/**
- * Render the `main` element consistently in IE.
- */
-main {
-  display: block;
 }
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -316,6 +310,12 @@ img {
   max-width: 100%;
   height: auto;
 }
+h2 {
+  margin: 0;
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: normal;
+}
 .visually-hidden {
   display: none;
 }
@@ -379,6 +379,10 @@ a.disabled {
   /*  курсор в виде стрелки */
   color: #888;
   /* цвет текста серый */
+}
+div.required label.control-label:after {
+  content: " *";
+  color: red;
 }
 @media (min-width: 768px) {
   .container {
