Сделал страницу каталога

--- a/src/less/block/product.less
+++ b/src/less/block/product.less
@@ -56,8 +56,10 @@
     text-align: center;
 }
 
-.product__title a {
+.product__link {
     color: #593700;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .product__manufacturer,
