--- a/src/less/block/product.less
+++ b/src/less/block/product.less
@@ -118,6 +118,10 @@
     width: 100%;
 }
 
+.product__price-wrapper {
+    text-align: center;
+}
+
 .product__price {
     font-size: 18px;
     font-weight: bold;
