Добавил товары с похожим названием в форму просмотра и редактирования товара

--- a/src/less/admin.less
+++ b/src/less/admin.less
@@ -57,3 +57,12 @@ div.required label.control-label:after {
     content: " *";
     color: red;
 }
+
+.sibling-goods {
+    margin: 20px;
+    padding: 0;
+    padding-bottom: 20px;
+    list-style: none;
+
+    columns: 500px 4;
+}
