--- a/assets/admin/css/admin.css
+++ b/assets/admin/css/admin.css
@@ -384,6 +384,15 @@ div.required label.control-label:after {
   content: " *";
   color: red;
 }
+
+.sibling-goods {
+    margin: 20px;
+    padding: 0;
+    padding-bottom: 20px;
+    list-style: none;
+    -webkit-columns: 500px 4;
+    columns: 500px 4;
+}
 @media (min-width: 768px) {
   .container {
     width: 640px;
