Добавил виджет datatable для поиска остатков

--- a/src/less/admin.less
+++ b/src/less/admin.less
@@ -4,6 +4,8 @@
 @import "mixins.less";
 @import "scaffolding.less";
 
+@import "bootstrap/_margin-padding.less";
+
 .wrap {
     padding-top: 60px;
 }
