Сверстал форму входа и личный кабинет

--- a/src/less/block/breadcrumb.less
+++ b/src/less/block/breadcrumb.less
@@ -20,6 +20,12 @@
     }
 }
 
+.breadcrumb__list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
 .breadcrumb li {
     display: inline-block;
 
