--- a/src/less/block/btn.less
+++ b/src/less/block/btn.less
@@ -10,6 +10,7 @@
     border-radius: 5px;
     border: 1px solid #008003;
     background-color: @bg-green;
+    cursor: pointer;
 
     &:hover {
         opacity: 0.8;
