--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,5 +1,5 @@
 @import "node_modules/normalize.less/normalize.less";
-
+@import "fonts.less";
 @import "variables.less";
 @import "mixins.less";
 @import "scaffolding.less";
@@ -26,3 +26,5 @@
 @import "page-footer.less";
 @import "block/brand.less";
 @import "block/good-by-name.less";
+@import "block/cabinet.less";
+@import "block/orders-table.less";
