--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,10 +1,14 @@
 @bg-orange: #e7821f;
 @bg-brown: #c16408;
+@bg-light-brown: #ffdaa0;
 @bg-blue: #60bdde;
 @bg-green: #0d960b;
 @bg-red: #f33927;
 
-@font-brown: #5f4123;
+
+@bg-border-light-brown: #cd9d51;
+
+@font-brown: #593700;
 @font-hover-brown: #b1600f;
 
 @tablet-widths: ~"(min-width: 768px)";
