Внедрил верстку форм авторизации

--- a/src/less/block/btn.less
+++ b/src/less/block/btn.less
@@ -11,6 +11,7 @@
     border: 1px solid #008003;
     background-color: @bg-green;
     cursor: pointer;
+    outline: none;
 
     &:hover {
         opacity: 0.8;
