--- a/src/less/block/cabinet.less
+++ b/src/less/block/cabinet.less
@@ -19,9 +19,8 @@
   margin-bottom: 40px;
 }
 
-.cabinet__content table tr {
+.cabinet__content table td {
   margin-bottom: 5px;
-  display: inline-block;
 }
 
 .cabinet__content table .field {
