--- a/src/less/block/content.less
+++ b/src/less/block/content.less
@@ -46,6 +46,10 @@ p.content__descr {
   width: 100%;
 }
 
+.content__form-footer {
+  margin-left: 25px;
+}
+
 .content__fields {
   display: flex;
   flex-direction: column;
