--- a/src/less/style.less
+++ b/src/less/style.less
@@ -3,6 +3,12 @@
 @import "variables.less";
 @import "mixins.less";
 @import "scaffolding.less";
+@import "bootstrap/variables.less";
+@import "bootstrap/mixins/alerts.less";
+@import "bootstrap/mixins/opacity.less";
+@import "bootstrap/alerts.less";
+@import "bootstrap/close.less";
+@import "elements/checkbox.less";
 
 @import "block/btn";
 @import "page-header.less";
