Добавил загрузку фото в профиль пользователя

--- a/src/less/block/cabinet.less
+++ b/src/less/block/cabinet.less
@@ -1,4 +1,5 @@
 .cabinet {
+  text-align: center;
   color: @font-brown;
 }
 
@@ -6,6 +7,13 @@
   margin-bottom: 25px;
   border-radius: 50%;
   border: 1px dashed @bg-border-light-brown;
+  object-fit: cover;
+  width: 225px;
+  height: 225px;
+}
+
+.cabinet__content {
+  text-align: left;
 }
 
 .cabinet__content-title {
@@ -66,7 +74,6 @@
   }
 
   .cabinet__photo {
-    width: 225px;
     margin-right: 25px;
   }
 
