--- a/src/less/style.less
+++ b/src/less/style.less
@@ -6,8 +6,11 @@
 @import "bootstrap/variables.less";
 @import "bootstrap/mixins/alerts.less";
 @import "bootstrap/mixins/opacity.less";
+@import "bootstrap/mixins/grid.less";
+@import "bootstrap/mixins/grid-framework.less";
 @import "bootstrap/alerts.less";
 @import "bootstrap/close.less";
+@import "bootstrap/grid.less";
 @import "elements/checkbox.less";
 
 @import "block/btn";
