--- a/src/less/style.less
+++ b/src/less/style.less
@@ -8,9 +8,17 @@
 @import "bootstrap/mixins/opacity.less";
 @import "bootstrap/mixins/grid.less";
 @import "bootstrap/mixins/grid-framework.less";
+@import "bootstrap/mixins/clearfix.less";
+@import "bootstrap/mixins/center-block.less";
+@import "bootstrap/mixins/vendor-prefixes.less";
+@import "bootstrap/mixins/tab-focus.less";
+@import "bootstrap/mixins/image.less";
+@import "bootstrap/mixins/hide-text.less";
 @import "bootstrap/alerts.less";
 @import "bootstrap/close.less";
 @import "bootstrap/grid.less";
+@import "bootstrap/utilities.less";
+@import "bootstrap/scaffolding.less";
 @import "elements/checkbox.less";
 
 @import "block/btn";
@@ -36,5 +44,5 @@
 @import "block/brand.less";
 @import "block/good-by-name.less";
 @import "block/cabinet.less";
-@import "block/orders-table.less";
+@import "block/table-orders.less";
 @import "forms.less";
