--- a/src/less/block/table-orders.less
+++ b/src/less/block/table-orders.less
@@ -1,5 +1,6 @@
 .table-orders {
   padding: 20px 15px;
+  margin-bottom: 25px;
   background-color: @bg-light-brown;
   border: 1px dashed @bg-border-light-brown;
   border-radius: 10px;
@@ -25,6 +26,15 @@
   }
 }
 
+.table-orders tr td {
+  text-align: left;
+}
+
+.table-orders tr:hover {
+  font-weight: bold;
+  cursor: pointer;
+}
+
 .table-orders tr:nth-child(2) td {
   padding-top: 0;
 }
@@ -43,6 +53,7 @@
 @media @tablet-widths {
   .table-orders {
     margin: 0;
+    margin-bottom: 25px;
     width: 100%;
   }
 
