--- a/src/less/main.less
+++ b/src/less/main.less
@@ -24,11 +24,11 @@
 @media @tablet-widths {
 
     .main__body {
+        padding-top: 25px;
         padding-bottom: 25px;
     }
 
     .main__content {
-        margin-top: 25px;
         padding: 25px;
         border-radius: 10px;
         box-shadow: 0 0 15px 1px @bg-brown;
