--- a/src/less/bootstrap/scaffolding.less
+++ b/src/less/bootstrap/scaffolding.less
@@ -26,7 +26,6 @@ html {
 }
 
 body {
-  font-family: @font-family-base;
   font-size: @font-size-base;
   line-height: @line-height-base;
   color: @text-color;
@@ -52,8 +51,8 @@ a {
 
   &:hover,
   &:focus {
-    color: @link-hover-color;
-    text-decoration: @link-hover-decoration;
+    //color: @link-hover-color;
+    text-decoration: none;
   }
 
   &:focus {
