--- a/src/less/block/product.less
+++ b/src/less/block/product.less
@@ -100,7 +100,7 @@
     margin-bottom: 10px;
     padding: 5px 0;
     padding-bottom: 0;
-    min-height: 50px;
+    min-height: 25px;
     list-style: none;
     border-bottom: 1px dashed @bg-brown;
     border-top: 1px dashed @bg-brown;
@@ -114,9 +114,9 @@
     line-height: 14px;
 }
 
-.product__characteristics-item:first-child {
+/*.product__characteristics-item:first-child {
     width: 100%;
-}
+}*/
 
 .product__price-wrapper {
     text-align: center;
