--- a/src/less/page-header.less
+++ b/src/less/page-header.less
@@ -5,14 +5,16 @@
 }
 
 .page-header__wrapper {
-    .container-fluid();
-    display: flex;
-    justify-content: space-between;
+  .container-fluid();
+  display: flex;
+  justify-content: space-between;
 
-    padding: 0 15px;
-    min-height: 117px;
-    background: #fff url("/img/bg-header.svg") no-repeat center;
-    background-size: cover;
+  padding: 0 15px;
+  padding-left: 0;
+  padding-right: 0;
+  min-height: 117px;
+  background: #fff url("/img/bg-header.svg") no-repeat center;
+  background-size: cover;
 }
 
 .page-header__user-menu {
@@ -20,22 +22,26 @@
 }
 
 .page-header__social {
-    margin: 0;
-    margin-top: 7px;
-    padding: 0;
-    list-style: none;
-    flex-shrink: 0;
+  margin: 0;
+  margin-top: 7px;
+  padding: 0;
+  list-style: none;
+  flex-shrink: 0;
+}
+
+.page-header__social-item {
+  margin-bottom: 10px;
 }
 
 .page-header__logo-wrapper {
-    align-self: center;
-    width: 172px;
-    text-align: center;
+  align-self: center;
+  width: 172px;
+  text-align: center;
 }
 
 .page-header__phone {
-    font-size: 18px;
-    line-height: 18px;
+  font-size: 18px;
+  line-height: 18px;
     font-weight: bold;
     letter-spacing: 0.5px;
     color: #219ef6;
