--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,4 +1,9 @@
 @import "node_modules/normalize.less/normalize.less";
+@import "node_modules/@fortawesome/fontawesome-free/less/fontawesome.less";
+@import "node_modules/@fortawesome/fontawesome-free/less/regular.less";
+@import "node_modules/@fortawesome/fontawesome-free/less/solid.less";
+@import "node_modules/@fortawesome/fontawesome-free/less/brands.less";
+
 @import "fonts.less";
 @import "variables.less";
 @import "mixins.less";
@@ -20,6 +25,7 @@
 @import "bootstrap/utilities.less";
 @import "bootstrap/scaffolding.less";
 @import "elements/checkbox.less";
+@import "elements/qty.less";
 
 @import "block/btn";
 @import "page-header.less";
@@ -45,4 +51,5 @@
 @import "block/good-by-name.less";
 @import "block/cabinet.less";
 @import "block/table-orders.less";
+@import "block/cart.less";
 @import "forms.less";
