--- a/src/pages/template/header.html
+++ b/src/pages/template/header.html
@@ -23,7 +23,7 @@
                 <span class="page-header__cart-quantity"><b>товаров: </b>3</span>
                 <span class="page-header__cart-summ"><b>на сумму: </b>524 руб.</span>
             </div>
-            <a href="#" class="page-header__cart-btn btn">Оформить заказ</a>
+            <a href="/cart.html" class="page-header__cart-btn btn">Оформить заказ</a>
         </div>
     </div>
     <nav class="main-nav main-nav--closed main-nav--nojs">
