--- a/src/less/block/btn.less
+++ b/src/less/block/btn.less
@@ -22,3 +22,23 @@
         background-color: darken(@bg-green, 15%);
     }
 }
+
+.btn--auth {
+    font-family: 'Caveat', sans-serif;
+    font-size: 30px;
+    width: 100%;
+    height: 60px;
+    border-radius: 30px;
+}
+
+.btn--cart {
+    margin: 0 auto;
+    padding: 0 25px;
+    padding-bottom: 5px;
+    font-family: 'Caveat', sans-serif;
+    font-size: 30px;
+    line-height: 30px;
+    height: 60px;
+    border-radius: 30px;
+    text-transform: lowercase;
+}
