Сделал рефакторинг, перенес код в модуль catalog

--- a/src/less/block/more-color.less
+++ b/src/less/block/more-color.less
@@ -31,9 +31,13 @@
     }
 }
 
-.more-color__item img {
-    width: 90%;
-    height: auto;
+.more-color__image-wrapper {
+
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 .more-color__color {
